tests/snapshots/test__from_fixtures@max_length__max_length_increase.json.snap
---
source: tests/test.rs
assertion_line: 12
expression: diff
info:
  lhs:
    maxLength: 5
    type: string
  rhs:
    maxLength: 10
    type: string
input_file: tests/fixtures/max_length/max_length_increase.json
---
[
    Change {
        path: "",
        change: MaxLengthChange {
            old_value: 5,
            new_value: 10,
        },
    },
]
