tests/snapshots/test__from_fixtures@max_length__max_length_remove.json.snap
---
source: tests/test.rs
assertion_line: 12
expression: diff
info:
  lhs:
    maxLength: 10
    type: string
  rhs:
    type: string
input_file: tests/fixtures/max_length/max_length_remove.json
---
[
    Change {
        path: "",
        change: MaxLengthRemove {
            removed: 10,
        },
    },
]
